[package]
name = "burn_p2p_python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
burn_p2p_checkpoint.workspace = true
burn_p2p_core.workspace = true
burn_p2p_dataloader.workspace = true
burn_p2p_experiment.workspace = true
burn_p2p_workload.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
