[package]
name = "burn_p2p_security"
description = "Security and validator-policy boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
burn_p2p_core = { path = "../burn_p2p_core" }
burn_p2p_experiment = { path = "../burn_p2p_experiment" }
chrono.workspace = true
hex.workspace = true
libp2p-identity = { version = "0.2.13", features = ["ed25519", "peerid"] }
semver.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "security"
harness = false

[lints]
workspace = true
