[package]
name = "burn_p2p_security"
description = "Security and validator-policy boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
burn_p2p_core.workspace = true
burn_p2p_experiment.workspace = true
chrono.workspace = true
getrandom = { version = "0.3", features = ["wasm_js"] }
hex.workspace = true
libp2p-identity = { version = "0.2.13", features = ["ed25519", "peerid", "rand"] }
semver.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "security"
harness = false

[lints]
workspace = true
