[package]
name = "burn_p2p_social"
description = "Optional social and leaderboard service boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = ["profiles", "leaderboards", "badges"]
profiles = []
leaderboards = ["profiles"]
badges = []
team-rollups = ["profiles"]

[dependencies]
burn_p2p_core.workspace = true
chrono.workspace = true
serde.workspace = true

[lints]
workspace = true
