[package]
name = "burn_p2p_swarm"
description = "Swarm/runtime boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
async-trait = "0.1"
burn_p2p_core.workspace = true
burn_p2p_experiment.workspace = true
chrono.workspace = true
futures = "0.3"
libp2p = { version = "0.56.0", default-features = false, features = ["macros", "noise", "ping", "request-response", "tls", "yamux"] }
libp2p-core = "0.43.2"
libp2p-identity = "0.2.13"
libp2p-request-response = { version = "0.29.0", features = ["cbor"] }
libp2p-swarm = "0.47.1"
libp2p-yamux = "0.47.0"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { version = "0.56.0", default-features = false, features = ["autonat", "dcutr", "dns", "gossipsub", "identify", "kad", "macros", "ping", "quic", "relay", "request-response", "tcp", "tls", "tokio", "websocket", "yamux"] }
libp2p-gossipsub = "0.49.2"
libp2p-identify = "0.47.0"
libp2p-kad = "0.48.0"
libp2p-mdns = { version = "0.48.0", features = ["tokio"] }
libp2p-rendezvous = "0.17.1"
burn_p2p_webrtc = { workspace = true, features = ["pem", "tokio"] }
rand = "0.8"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
burn_p2p_webrtc_websys.workspace = true
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_0_2 = { package = "getrandom", version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
libp2p = { version = "0.56.0", default-features = false, features = ["gossipsub", "macros", "noise", "ping", "request-response", "wasm-bindgen", "websocket-websys", "webtransport-websys", "yamux"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
criterion.workspace = true
semver.workspace = true
tempfile.workspace = true

[[bench]]
name = "control_plane"
harness = false

[lints]
workspace = true
