[package]
name = "burn_p2p_testkit"
description = "Simulation and QA boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
burn_p2p = { path = "../burn_p2p" }
burn_p2p_bootstrap = { path = "../burn_p2p_bootstrap", default-features = false, features = [
  "admin-http",
  "metrics",
  "metrics-indexer",
  "artifact-publish",
  "artifact-download",
  "artifact-fs",
  "browser-edge",
  "browser-join",
  "rbac",
  "auth-static",
  "auth-github",
  "auth-oidc",
  "auth-oauth",
  "social",
] }
burn_p2p_engine = { path = "../burn_p2p_engine" }
burn_p2p_checkpoint = { path = "../burn_p2p_checkpoint" }
burn_p2p_core = { path = "../burn_p2p_core" }
burn_p2p_dataloader = { path = "../burn_p2p_dataloader" }
burn_p2p_experiment = { path = "../burn_p2p_experiment" }
burn_p2p_limits = { path = "../burn_p2p_limits" }
burn_p2p_metrics = { path = "../burn_p2p_metrics" }
burn_p2p_app = { path = "../burn_p2p_app", features = ["interactive", "browser-join"] }
burn_p2p_security = { path = "../burn_p2p_security" }
burn_p2p_swarm = { path = "../burn_p2p_swarm" }
burn_p2p_views = { path = "../burn_p2p_views" }
chrono.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasm-bindgen-cli-support = "0.2.117"

[dev-dependencies]
burn_p2p_browser = { path = "../burn_p2p_browser" }
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "browser_path"
harness = false

[[bench]]
name = "merge_topology"
harness = false

[lints]
workspace = true
