[package]
name = "burn_p2p_testkit"
description = "Simulation and QA boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
publish = false

[features]
native-gpu-probe = ["dep:burn", "burn_p2p/burn"]

[dependencies]
anyhow.workspace = true
burn = { workspace = true, optional = true, features = ["autodiff", "wgpu", "cuda"] }
burn_p2p.workspace = true
burn_p2p_bootstrap = { workspace = true, features = [
  "admin-http",
  "metrics",
  "metrics-indexer",
  "artifact-publish",
  "artifact-download",
  "artifact-fs",
  "browser-edge",
  "browser-join",
  "rbac",
  "auth-static",
  "auth-github",
  "auth-oidc",
  "auth-oauth",
  "social",
] }
burn_p2p_engine.workspace = true
burn_p2p_checkpoint.workspace = true
burn_p2p_core.workspace = true
burn_p2p_dataloader.workspace = true
burn_p2p_experiment.workspace = true
burn_p2p_limits.workspace = true
burn_p2p_metrics.workspace = true
burn_p2p_app = { workspace = true, features = ["interactive", "browser-join"] }
burn_p2p_security.workspace = true
burn_p2p_swarm.workspace = true
burn_p2p_views.workspace = true
chrono.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasm-bindgen-cli-support = "0.2.117"

[dev-dependencies]
burn_p2p_browser.workspace = true
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "browser_path"
harness = false

[[bench]]
name = "merge_topology"
harness = false

[[bin]]
name = "burn-p2p-testkit-native-accelerator-probe"
path = "src/bin/burn-p2p-testkit-native-accelerator-probe.rs"
required-features = ["native-gpu-probe"]

[lints]
workspace = true
