[package]
name = "burn_p2p_ui"
description = "Typed telemetry and reference UI boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
burn_p2p_bootstrap = { path = "../burn_p2p_bootstrap" }
burn_p2p_core = { path = "../burn_p2p_core" }
burn_p2p_experiment = { path = "../burn_p2p_experiment" }
burn_p2p_security = { path = "../burn_p2p_security" }
burn_p2p_swarm = { path = "../burn_p2p_swarm" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
