[package]
name = "burn_p2p_ui"
description = "Typed telemetry and reference UI boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
publish = false

[dependencies]
burn_p2p_bootstrap.workspace = true
burn_p2p_core.workspace = true
burn_p2p_experiment.workspace = true
burn_p2p_security.workspace = true
burn_p2p_swarm.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
