[package]
name = "burn_p2p_views"
description = "Typed frontend view-model and contract crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
burn_p2p_core.workspace = true
burn_p2p_experiment.workspace = true
burn_p2p_security.workspace = true
burn_p2p_swarm.workspace = true
burn_p2p_workload.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
