[package]
name = "burn_p2p_webrtc"
description = "Patched native WebRTC-direct transport for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
pem = ["webrtc?/pem"]
tokio = [
  "dep:tokio",
  "dep:tokio-util",
  "dep:webrtc",
  "if-watch/tokio",
]

[lib]
name = "burn_p2p_webrtc"
path = "src/lib.rs"

[[test]]
name = "smoke"
path = "tests/smoke.rs"
required-features = ["tokio"]

[dependencies]
async-trait = "0.1"
futures = "0.3.30"
futures-timer = "3"
hex.workspace = true
if-watch = "3.2.1"
libp2p-core = "0.43.1"
libp2p-identity = "0.2.12"
libp2p-noise = "0.46.1"
libp2p-webrtc-utils = "0.4.0"
multihash = "0.19.1"
rand = "0.8"
rcgen = "0.13"
stun = "0.7"
thiserror.workspace = true
tokio = { version = "1.38", features = ["net"], optional = true, default-features = false }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
tracing = "0.1.41"
webrtc = { version = "0.17.0", optional = true }

[dev-dependencies]
libp2p-identity = { version = "0.2.12", features = ["rand"] }
tokio = { version = "1.38", features = ["full"], default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints]
workspace = true
